[gd_scene load_steps=2 format=3 uid="uid://ovyydw0ddwrq"]

[ext_resource type="Script" path="res://file_pick.gd" id="1_tpw1k"]

[node name="File Pick" type="VBoxContainer"]
custom_minimum_size = Vector2(400, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_tpw1k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Button_open_last" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Open Last File"

[node name="Button_open" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Open File"

[node name="Button_new" type="Button" parent="."]
layout_mode = 2
text = "New File"

[node name="FileDialog_save" type="FileDialog" parent="."]
unique_name_in_owner = true
mode = 2
initial_position = 2
size = Vector2i(500, 500)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.pwgs")

[node name="FileDialog_load" type="FileDialog" parent="."]
unique_name_in_owner = true
mode = 2
title = "Open a File"
initial_position = 2
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.pwgs")

[connection signal="pressed" from="HBoxContainer/Button_open_last" to="." method="_on_button_open_last_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_open" to="." method="_on_button_open_pressed"]
[connection signal="pressed" from="Button_new" to="." method="_on_button_new_pressed"]
[connection signal="file_selected" from="FileDialog_save" to="." method="_on_file_dialog_save_file_selected"]
[connection signal="file_selected" from="FileDialog_load" to="." method="_on_file_dialog_load_file_selected"]
